CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Concurrent_utils CXX)
ENABLE_TESTING()

IF(WIN32)
add_definitions(-DBOOST_ALL_DYN_LINK)
ENDIF(WIN32)

set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
SET(BOOST_MIN_VERSION "1.40.0")
FIND_PACKAGE(Boost ${BOOST_MIN_VERSION} COMPONENTS thread date_time unit_test_framework REQUIRED)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  IF(UNIX)
    list( APPEND Boost_LIBRARIES pthread)
  ENDIF(UNIX)
ELSE(Boost_FOUND)
  MESSAGE(FATAL_ERROR
    "Can't find BOOST libraries")
ENDIF(Boost_FOUND)

INCLUDE_DIRECTORIES(./)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(tests)

